This file only list changes to game code.  Changes to content can be found here:

http://onehouronelife.com/updateLog.php



Editor Fixes:

--Fixed bug in held-position view in EditObjectPage due to failure to
  initialize +containOffsets in local copy of object.

--Fixed bug in mCellSpriteVarSlider visibility in Scene Editor that was
  making mCellSpriteVanishSlider invisible too.  Can now correctly pick
  various use states for objects in scenes again.

--Fixed scene editor to allow variable uses displayed in contained objects (but
  not in sub-contained objects, for now).  This is correctly saved into the
  scene file format (but the code can still read the older style that doesn't
  have these extra fields).

--Fixed bug in maintaining producesMap in transition bank that was causing
  duplicate transitions to appear in transition editor searches.



Server Fixes

--New +containOffset tags were being treated like +contFoodDish tags and
  blocking containment.  Fixes #913

--Twins that follow the lead twin to the tutorial area no longer have their
  births logged (their deaths were already not being logged).  Fixes #914

--Fixed so that building components that appear on an auto-extended half-floor
  in a bad biome are accessible to non-biome specialists.  If a door looks like
  there's a floor under it, you can open it now.  This also applies to
  horizontal walls that have completed floors in the tile below them, but no
  hidden floors directly in the same tile as the wall.  Before, you could be
  standing in a building and be unable to access a wall shelf clearly in the
  building.  This applies to all objects that have the floor-hugging property
  set.  Fixe #920




Version 387    2023-August-18

--Added support for +containOffsetX/Y and +containOffsetBottomX/Y to micro-
  adjust the automatic container position of an object.  Needed for how empty
  glass bottles position on the table.  Part of jasonrohrer/OneLifeData7#1066




Server Fixes
