@@ -1205,13 +1205,22 @@ void EditorScenePage::drawUnderComponents( doublePair inViewCenter,
                 
                 if( cellOID > 0 && getObject( cellOID )->floorHugging ) {
                     
-                    if( x > 0 && mFloorCells[y][ x - 1 ].oID > 0 ) {
+                    // assume any floors with roadParentID defined
+                    // have special visual curves, etc, and don't make
+                    // them hug walls.  Single-tile floors and roads can
+                    // hug walls just fine.
+
+                    if( x > 0 && mFloorCells[y][ x - 1 ].oID > 0 &&
+                        getObject( mFloorCells[y][ x - 1 ].oID )->roadParentID 
+                        == -1 ) {
                         // floor to our left
                         passIDs[1] = mFloorCells[y][ x - 1 ].oID;
                         drawHuggingFloor = true;
                         }
                     
-                    if( x < mSceneW - 1 && mFloorCells[y][ x + 1 ].oID > 0 ) {
+                    if( x < mSceneW - 1 && mFloorCells[y][ x + 1 ].oID > 0 &&
+                        getObject( mFloorCells[y][ x + 1 ].oID )->roadParentID 
+                        == -1 ) {
                         // floor to our right
                         passIDs[2] = mFloorCells[y][ x + 1 ].oID;
                         drawHuggingFloor = true;
